syntax = "proto3";

option go_package = "/protoGenerated";

message StateSubset {
  int32 OriginatorIndex = 1;
  int32 PendingMap = 2;
  int32 RerouteMap = 3;
  int32 CacheStruct = 4;
  int32 SuccessfulFound = 5;
  int32 FailedRequestsThreshold = 6;
  int32 FailedRequestsAccess = 7;
  int32 TimeStep = 8;
}

message StateSubsets {
  repeated StateSubset subset = 1;
}